# enterprise-web

./: .gitignore  Makefile  pyproject.toml  todo.MD
arch_sketches/: database.db  entity_factory_model.py
enterprise_web/: auth.py  cli.py  dev.py  infra.py  log.py  repo.py
enterprise_web/api/: command.py  feature.py
enterprise_web/cli/: cli.py
enterprise_web/cli/templates/: entity.jinja2
enterprise_web/integrations/web/: fastapi.py
sample_project/: Makefile  database.db  main.py  pyproject.toml  pyproject.toml.bak
sample_project/api/project/domain/: __init__.py  project_entity.py
sample_project/sample_project/: main.py
sample_project/sample_project/api/: __init__.py
sample_project/sample_project/api/common/data_stores/: __init__.py  sqlmodel.py  types.py
sample_project/sample_project/api/project/: __init__.py  feature.py
sample_project/sample_project/api/project/commands/: create.py
sample_project/sample_project/api/project/commands/crud/: __init__.py  create.py  feature_group.py
sample_project/sample_project/api/project/data/: __init__.py  models.py  repo.py
sample_project/sample_project/api/project/domain/: project_entity.py
