[project.scripts]

[tool.poetry]
name = "enterprise-web"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# packages = [{include = "sample_project"}, {include = "enterprise_web"}]


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ewcli = "enterprise_web.cli:main"
