[project.scripts]

[tool.poetry]
name = "enterprise-web"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# packages = [{include = "sample_project"}, {include = "enterprise_web"}]


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
sqlmodel = "^0.0.14" # TODO: (Hristo) Do I need sqlmodel as dep. I think not ?

# TODO: (Hristo) How do we make these optional deps that are installed on dev. end user local but not prod. build of 
# project using our lib ?
tomlkit = "^0.12.3"
typer = "^0.9.0"
rich = "^13.7.0"
textual = "^0.48.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ewcli = "enterprise_web.cli:app"
